--- a/src/_layouts/posts.html
+++ b/src/_layouts/posts.html
@@ -33,7 +33,7 @@
 
     <main class="container md-container m-between-5 mt-4 mb-5 pb-5">
 
-        {% if page.is_blogpost == false %}
+        {% if page.is_blogpost != true %}
         <!-- ###################### News overview ###################### -->
 
         <div class="mb-3">
