--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -29,6 +29,11 @@
         {%- assign first = true -%}
         {%- assign sorted_pages = site.pages | sort: 'order' -%}
         {%- for i_page in sorted_pages -%}
+
+        {%- if i_page.pagination_info and i_page.pagination_info.curr_page > 1 -%}
+        {%- continue -%}
+        {%- endif -%}
+
         {%- if i_page.in_shortcuts == true -%}
         {%- if i_page.external_link -%}
         {%- assign link = i_page.external_link -%}
