--- a/src/_includes/sections/subpages.html
+++ b/src/_includes/sections/subpages.html
@@ -38,6 +38,11 @@
         {%- assign first = true -%}
         {%- assign sorted_pages = site.pages | sort: 'order' -%}
         {%- for i_page in sorted_pages -%}
+
+        {%- if i_page.pagination_info and i_page.pagination_info.curr_page > 1 -%}
+        {%- continue -%}
+        {%- endif -%}
+
         {%- if i_page.parent == parent -%}
         {%- if i_page.external_link -%}
         {%- assign link = i_page.external_link -%}
