--- a/src/_layouts/posts.html
+++ b/src/_layouts/posts.html
@@ -76,14 +76,16 @@
 
             <h2>Tags</h2>
             <ul>
-                {% for tag in site.tags %}
+                {% assign sorted_tags = site.tags | sort %}
+                {% for tag in sorted_tags %}
                 <li>{{ tag[0] }}</li>
                 {% endfor %}
             </ul>
 
             <h2>Categories</h2>
             <ul>
-                {% for cat in site.categories %}
+                {% assign sorted_cats = site.categories | sort %}
+                {% for cat in sorted_cats %}
                 <li>{{ cat[0] }}</li>
                 {% endfor %}
             </ul>
