--- a/src/_includes/main/post-header.html
+++ b/src/_includes/main/post-header.html
@@ -10,7 +10,7 @@
 {% if head_level <= 2 %}{%- assign tag_subtitle_display = head_level | plus: 3 | prepend: "h" -%}
 {% else %}{%- assign tag_subtitle_display = "normal" -%}{% endif %}
 
-<div class="mb-4">
+<div>
     <div class="d-flex flex-wrap align-items-center">
         <div class="me-3">
             <!--@formatter:off-->
