posts: make pagination disable-able and correct paths

--- a/src/_layouts/blog_post.html
+++ b/src/_layouts/blog_post.html
@@ -38,7 +38,7 @@
         {% include content.html %}
 
         <div class="d-flex justify-content-center">
-            <a href="{{ posts_root_page.url }}" class="btn btn-outline-primary w-fix-lg">
+            <a href="{{ relBase }}{{ posts_root_page.url }}" class="btn btn-outline-primary w-fix-lg">
                 To all posts
             </a>
         </div>
