--- a/src/_layouts/blog_post.html
+++ b/src/_layouts/blog_post.html
@@ -6,7 +6,7 @@
 </head>
 <body data-role="page" class="position-relative">
 
-    {%- assign posts_root = page.posts_root -%}
+    {%- assign postlist_id = page.postlist_id -%}
 
     {%- for i_page in site.pages -%}
     {%- assign id = i_page.url | split: '/' | last -%}
@@ -15,13 +15,13 @@
     {%- assign tmp = id.size | minus: 2 -%}
     {%- assign id = id[tmp] -%}
     {%- endif -%}
-    {%- if id == posts_root -%}
-    {%- assign posts_root_page = i_page -%}
+    {%- if id == postlist_id -%}
+    {%- assign postlist_page = i_page -%}
     {%- endif -%}
     {%- endfor -%}
 
-    {% include main/menu.html active=posts_root %}
-    {% include main/topbar.html active=posts_root %}
+    {% include main/menu.html active=postlist_id %}
+    {% include main/topbar.html active=postlist_id %}
 
     <noscript>
         <div class="alert alert-danger" role="alert">
@@ -38,7 +38,7 @@
         {% include content.html %}
 
         <div class="d-flex justify-content-center">
-            <a href="{{ relBase }}{{ posts_root_page.url }}" class="btn btn-outline-primary w-fix-lg">
+            <a href="{{ relBase }}{{ postlist_page.url }}" class="btn btn-outline-primary w-fix-lg">
                 To all posts
             </a>
         </div>
