--- a/src/_layouts/blog_post.html
+++ b/src/_layouts/blog_post.html
@@ -32,7 +32,7 @@
 
     <main class="container md-container m-between-5 mt-4 mb-5 pb-5">
         <div class="mb-4">
-            {% include main/post-header.html post=page %}
+            {% include main/post-header.html post=page link_badges=true %}
         </div>
 
         {% include content.html %}
