general layout adaptions

--- a/src/_includes/main/head.html
+++ b/src/_includes/main/head.html
@@ -123,7 +123,4 @@
                    website
     ######################################### -->
 <link rel="stylesheet" type="text/css" href="{{ relBase }}/assets/website.css?v={{ site.time | date: '%Y%m%d%H%M%S%L' }}">
-<script type="module">
-    //import SITE from '{{ relBase }}/assets/website.js';
-    //window.SITE = SITE;
-</script>
+<script type="text/javascript" src="{{ relBase }}/assets/website.js"></script>
