--- a/src/assets/website.less
+++ b/src/assets/website.less
@@ -5,6 +5,7 @@
 @import (less,reference) url("bootstrap/bootstrap-individual.css");
 
 @import url("less/code.less");
+@import url("less/jsxgraph_override.less");
 @import url("less/general.less");
 @import url("less/svg-color.less");
 @import url("less/splash.less");
