--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -19,7 +19,7 @@
 @color_outer_light: mix(@color_outer, #fff, @threshold_light);
 @color_outer_dark: mix(@color_outer, #10427C, @threshold_dark);
 
-@underline_links: true;
+@underline_links: false;
 
 @color_code_base: mix(#fdfdfd, @color_primary, 85%);
 @color_code_bg: mix(@color_code_base, #fff, 45%);
