--- a/src/assets/less/general.less
+++ b/src/assets/less/general.less
@@ -10,3 +10,24 @@ h5, .h5,
 h6, .h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
+.md-container {
+  max-width: 90%;
+}
+
+@media (min-width: 1400px) {
+  .md-container {
+    max-width: 1050px; // make xxl container same with as xl
+  }
+}
+
+:root {
+  @media (min-width: 576px) {
+    --bs-body-font-size: 1.25rem;
+  }
+}
+
+footer {
+  --bs-body-font-size: 1rem;
+  font-size: 1rem;
+}
