--- a/src/_includes/sections/board.html
+++ b/src/_includes/sections/board.html
@@ -10,4 +10,30 @@
             /*@formatter:on*/
         })();
     </script>
+
+    {% if include.data.title %}
+    <div class="mt-3 text-muted smaller text-center">
+        {% if include.data.link %}
+
+        {%- assign stringToCheck = include.data.link %}
+        {%- assign checkArray = stringToCheck | split: ':' -%}
+        {%- if checkArray[0] == 'http' or checkArray[0] == 'https' or include.data.target == "_blank" -%}
+        {%- assign link = include.data.link -%}
+        {%- assign target = include.data.target | default: "_blank" -%}
+        {%- else -%}
+        {%- assign link = relBase | append: include.data.link -%}
+        {%- assign target = include.data.target | default: "_self" -%}
+        {%- endif -%}
+        <a href="{{ link }}" target="{{ target }}">
+            <span>{{ include.data.title }}</span>
+            {%- if target == "_blank" -%}
+            <i class="fa-solid fa-arrow-up-right-from-square ms-2"></i>
+            {%- endif -%}
+        </a>
+
+        {% else %}
+        {{ include.data.title }}
+        {% endif %}
+    </div>
+    {% endif %}
 </div>
