--- a/src/assets/less/jsxgraph_override.less
+++ b/src/assets/less/jsxgraph_override.less
@@ -1,5 +1,5 @@
 .jxgbox {
-  background-color: @color_outer;
+  background-color: transparent; // @color_outer;
   border: none;
   border-radius: 0;
 }
