--- a/src/assets/less/topbar.less
+++ b/src/assets/less/topbar.less
@@ -1,9 +1,8 @@
 #topbar {
   &:not(.topbar-splash) {
-    .bg-outer-gradient();
+    .bg-outer();
     .border-bottom();
-    .border-primary-dark-faded();
-    .shadow-outer-dark();
+    .border-outer();
   }
 
   &.topbar-splash {
