--- a/src/_includes/main/footer.html
+++ b/src/_includes/main/footer.html
@@ -4,7 +4,7 @@
         {% include part/supporters.html %}
     </div>
     {% endif %}
-    <div class="bg-primary-gradient">
+    <div class="bg-primary">
         <div class="container md-container py-4">
             <div class="row justify-content-between align-items-center g-4">
                 <div class="col-12 col-md-6">
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <div class="bg-outer-gradient">
+    <div class="bg-outer">
         <div class="container md-container py-4">
             <div class="d-flex flex-wrap flex-nowrap-md justify-content-center align-items-center">
                 <div class="nowrap">
