--- a/src/assets/less/topbar.less
+++ b/src/assets/less/topbar.less
@@ -5,9 +5,14 @@
     .border-outer();
   }
 
+  &:not(.topbar-splash) {
+    .topbar-onlysplash {
+      .off();
+    }
+  }
+
   &.topbar-splash {
-    #topbar-logo,
-    #topbar-start {
+    .topbar-nosplash {
       .off();
     }
 
