--- a/src/assets/less/general.less
+++ b/src/assets/less/general.less
@@ -40,3 +40,9 @@ footer {
   --bs-body-font-size: 1rem;
   font-size: 1rem;
 }
+
+.icon-external-link {
+  vertical-align: text-top;
+  font-size: calc(var(--bs-body-font-size) * 0.55);
+  margin-left: calc(var(--bs-body-font-size) * 0.55 / 2);
+}
