--- a/src/_includes/sections/board-block.html
+++ b/src/_includes/sections/board-block.html
@@ -22,9 +22,9 @@
             {%- assign target = include.data.target | default: "_self" -%}
             {%- endif -%}
             <a href="{{ link }}" target="{{ target }}">
-                <span>{{ include.data.title }}</span>
+                {{ include.data.title }}
                 {%- if target == "_blank" -%}
-                <i class="fa-solid fa-arrow-up-right-from-square ms-2"></i>
+                <i class="fa-solid fa-arrow-up-right-from-square icon-external-link"></i>
                 {%- endif -%}
             </a>
 
