--- a/src/assets/website.css
+++ b/src/assets/website.css
@@ -58753,6 +58753,11 @@ footer {
   --bs-body-font-size: 1rem;
   font-size: 1rem;
 }
+.icon-external-link {
+  vertical-align: text-top;
+  font-size: calc(var(--bs-body-font-size) * 0.55);
+  margin-left: calc(var(--bs-body-font-size) * 0.55 / 2);
+}
 .svg-body path {
   stroke: #fff !important;
 }
