--- a/src/_includes/main/footer.html
+++ b/src/_includes/main/footer.html
@@ -9,20 +9,18 @@
             <div class="row justify-content-between align-items-center g-4">
                 <div class="col-12 col-md-6">
                     <div class="m-between-2 m-between-md-3">
-                        {%- assign sorted_pages = site.pages | sort: 'order' -%}
-                        {%- for i_page in sorted_pages %}
+                        {%- assign pagelist = site.pages | where: "in_menu_footer",true | sort: 'order' -%}
+                        {%- for i_page in pagelist %}
 
                         {%- if i_page.pagination_info and i_page.pagination_info.curr_page > 1 -%}
                         {%- continue -%}
                         {%- endif -%}
 
-                        {%- if i_page.in_menu_footer == true -%}
                         <div>
                             <a href="{{ relBase }}{{ i_page.url }}" class="link-white link-quiet">
                                 {{ i_page.menu_title | default: i_page.header | default: i_page.title }}
                             </a>
                         </div>
-                        {%- endif -%}
                         {%- endfor -%}
                     </div>
                 </div>
