--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -53,7 +53,13 @@
                 </div>
                 {% endif %}
                 <div class="mt-3 link-{{ color }}">
-                    {{ i_page.title_short | default: i_page.title }}
+                <div class="link-{{ color }}">
+                        {{ i_page.title_short | default: i_page.title }}
+                        {% if i_page.subtitle %}
+                        <div class="smaller">
+                            {{ i_page.subtitle }}
+                        </div>
+                        {% endif %}
                 </div>
             </a>
         </div>
